# phm-korea-2026-quality-routing

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
experiments/quality_routing/: __init__.py  run.py
scripts/: download_paderborn.sh
src/phm_routing/: __init__.py
src/phm_routing/data/: noise_injection.py  paderborn.py  protocol.py  windowing.py
src/phm_routing/eval/: mixed_snr.py
src/phm_routing/models/: cnn1d.py  noise_estimator.py
src/phm_routing/training/: train_cnn.py  train_estimator.py
src/phm_routing/utils/: metrics.py  seed.py
tests/: test_paderborn_pu_c1.py  test_quality_routing.py
